kernel.log
scripts/kconfig/conf --silentoldconfig Kconfig
  CHK     include/linux/version.h
  CHK     include/generated/utsrelease.h
  UPD     include/generated/utsrelease.h
  HOSTCC  scripts/dtc/checks.o
  HOSTCC  scripts/dtc/data.o
  HOSTCC  scripts/dtc/dtc-lexer.lex.o
  HOSTCC  scripts/genksyms/genksyms.o
  HOSTCC  scripts/dtc/dtc-parser.tab.o
  HOSTCC  scripts/dtc/dtc.o
  HOSTCC  scripts/genksyms/lex.lex.o
  HOSTCC  scripts/dtc/flattree.o
  HOSTCC  scripts/dtc/fstree.o
  HOSTCC  scripts/dtc/livetree.o
  HOSTCC  scripts/dtc/srcpos.o
  HOSTCC  scripts/genksyms/parse.tab.o
  HOSTCC  scripts/dtc/treesource.o
  HOSTLD  scripts/genksyms/genksyms
  HOSTCC  scripts/dtc/util.o
  CC      scripts/mod/empty.o
  HOSTCC  scripts/mod/mk_elfconfig
  HOSTCC  scripts/selinux/genheaders/genheaders
  HOSTLD  scripts/dtc/dtc
  MKELF   scripts/mod/elfconfig.h
  HOSTCC  scripts/selinux/mdp/mdp
  HOSTCC  scripts/mod/file2alias.o
  HOSTCC  scripts/kallsyms
  HOSTCC  scripts/conmakehash
  HOSTCC  scripts/bin2c
make[1]: `include/generated/mach-types.h' is up to date.
  HOSTCC  scripts/mod/modpost.o
  HOSTCC  scripts/mod/sumversion.o
  CC      kernel/bounds.s
  GEN     include/generated/bounds.h
  CC      arch/arm/kernel/asm-offsets.s
  GEN     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
  HOSTLD  scripts/mod/modpost
  CC      init/main.o
  CHK     include/generated/compile.h
  CC      init/do_mounts.o
  HOSTCC  usr/gen_init_cpio
  CC      init/do_mounts_rd.o
  GEN     usr/initramfs_data.cpio
  AS      usr/initramfs_data.o
  LD      usr/built-in.o
  CC      arch/arm/vfp/vfpmodule.o
  CC      init/do_mounts_initrd.o
  CC      init/initramfs.o
  CC      init/calibrate.o
  CC      init/version.o
  AS      arch/arm/vfp/entry.o
  AS      arch/arm/vfp/vfphw.o
  CC      arch/arm/kernel/elf.o
  CC      arch/arm/vfp/vfpsingle.o
  LD      init/mounts.o
  LD      init/built-in.o
  CC      arch/arm/mm/dma-mapping.o
  CC      arch/arm/common/gic.o
  AS      arch/arm/kernel/entry-armv.o
  AS      arch/arm/kernel/entry-common.o
  CC      arch/arm/kernel/irq.o
  CC      arch/arm/vfp/vfpdouble.o
  CC      arch/arm/common/cpaccess.o
  CC      arch/arm/mm/extable.o
  CC      arch/arm/kernel/opcodes.o
  CC      arch/arm/mm/fault.o
  CC      arch/arm/kernel/process.o
  LD      arch/arm/common/built-in.o
  LD      arch/arm/vfp/vfp.o
  LD      arch/arm/vfp/built-in.o
  LD      arch/arm/net/built-in.o
  CC      arch/arm/kernel/ptrace.o
  LD      arch/arm/crypto/built-in.o
  CC      arch/arm/mach-msm/io.o
  CC      arch/arm/mm/init.o
arch/arm/kernel/process.c: In function '__show_regs':
arch/arm/kernel/process.c:394:4: error: invalid 'asm': operand number out of range
    asm("mrc p15, 0, %0, c2, c0\n\t"
    ^
make[1]: *** [arch/arm/kernel/process.o] Error 1
make[1]: *** Waiting for unfinished jobs....
  CC      arch/arm/perfmon/perf-function-hooks.o
  CC      arch/arm/mach-msm/dma.o
make: *** [arch/arm/kernel] Error 2
make: *** Waiting for unfinished jobs....
  CC      arch/arm/mach-msm/memory.o
  LD      arch/arm/perfmon/built-in.o
  CC      arch/arm/mach-msm/clock.o
  CC      arch/arm/mm/iomap.o
  CC      arch/arm/mach-msm/clock-voter.o
  CC      arch/arm/mm/fault-armv.o
  CC      arch/arm/mach-msm/clock-dummy.o
  CC      arch/arm/mach-msm/clock-generic.o
  CC      arch/arm/mm/flush.o
  CC      arch/arm/mach-msm/modem_notifier.o
  CC      arch/arm/mach-msm/board-dt.o
  CC      arch/arm/mach-msm/nohlt.o
  CC      arch/arm/mach-msm/clock-debug.o
  CC      arch/arm/mach-msm/acpuclock.o
  CC      arch/arm/mach-msm/perf_trace_counters.o
  CC      arch/arm/mach-msm/acpuclock-krait.o
  CC      arch/arm/mm/idmap.o
  CC      arch/arm/mach-msm/clock-krait.o
  CC      arch/arm/mach-msm/acpuclock-krait-debug.o
  CC      arch/arm/mm/ioremap.o
  CC      arch/arm/mach-msm/msm-krait-l2-accessors.o
  CC      arch/arm/mach-msm/perf_event_msm_krait_l2.o
  CC      arch/arm/mm/mmap.o
  CC      arch/arm/mach-msm/krait-scm.o
  CC      arch/arm/mach-msm/perf_debug.o
  AS      arch/arm/mach-msm/headsmp.o
  CC      arch/arm/mm/pgd.o
  CC      arch/arm/mach-msm/platsmp.o
  CC      arch/arm/mach-msm/hotplug.o
  AS      arch/arm/mach-msm/idle-v7.o
  CC      arch/arm/mach-msm/jtag-fuse.o
  CC      arch/arm/mach-msm/jtag.o
  CC      arch/arm/mm/mmu.o
  CC      arch/arm/mm/vmregion.o
  CC      arch/arm/mach-msm/smd.o
  CC      arch/arm/mm/proc-syms.o
  CC      arch/arm/mach-msm/smd_debug.o
  CC      arch/arm/mm/alignment.o
  CC      arch/arm/mm/highmem.o
  CC      arch/arm/mach-msm/remote_spinlock.o
  AS      arch/arm/mm/abort-ev7.o
  AS      arch/arm/mm/pabort-v7.o
/tmp/ccqlngyW.s: Assembler messages:
/tmp/ccqlngyW.s:164: Warning: swp{b} use is deprecated for ARMv6 and ARMv7
/tmp/ccqlngyW.s:190: Warning: swp{b} use is deprecated for ARMv6 and ARMv7
  AS      arch/arm/mm/cache-v7.o
  CC      arch/arm/mm/copypage-v6.o
  CC      arch/arm/mm/context.o
  CC      arch/arm/mach-msm/smd_private.o
  CC      arch/arm/mach-msm/smem.o
  AS      arch/arm/mm/tlb-v7.o
  CC      arch/arm/mach-msm/smd_init_dt.o
  AS      arch/arm/mm/proc-v7.o
  CC      arch/arm/mach-msm/smd_init_plat.o
  LD      arch/arm/mm/built-in.o
arch/arm/mach-msm/smd_init_dt.c:24:25: fatal error: smd_private.h: No such file or directory
 #include <smd_private.h>
                         ^
compilation terminated.
make[1]: *** [arch/arm/mach-msm/smd_init_dt.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [arch/arm/mach-msm] Error 2
